# WSIRadiomics

./: .gitignore  LICENSE  README.md  README_cn.md  environment.yaml  pyproject.toml
examples/: example_file.csv  extract_from_pandas.py  params.yaml
examples/extract_from_pandas/: extract_from_pandas.py
result/: wsi_features.csv
src/: model.py
src/wsiradiomics/: __init__.py  _version.py  extractor.py
src/wsiradiomics/aggregation/: functions.py  readme.md
src/wsiradiomics/features/: firstorder.py  glcm.py  gldm.py  glrlm.py  glszm.py  ngtdm.py  readme.md  shape.py
src/wsiradiomics/io/: geojson.py  output.py  params.py  readme.md  slide.py
src/wsiradiomics/pipeline/: cell_features.py  wsi_aggregation.py
src/wsiradiomics/utils/: make_csv_file.py  patch_check.py
